[package]
name = "spoti_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
rspotify = {version="0.12.0", features= ["env-file", "cli"] }
tokio = {version="1.32.0", features= ["full"] }
tui = "0.19.0"
